force-app/main/default/objects/IME_Signature_Information__c/IME_Signature_Information__c.object-meta.xml
<CustomObject>
    <description>Docusign eSignature functionality for the UK Contract team (case 01200457)</description>
    <label>Signature Information</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Signatory Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signature Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>