force-app/main/default/objects/IME_Signature_Information__c/fields/Carbon_Copy_Signer__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Copy_Signer__c</fullName>
    <inlineHelpText>Name of the Signing Group to receive notification of completed documents</inlineHelpText>
    <label>Carbon Copy Signer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UKICCRecipients</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>UKICCRecipients_Test</fullName>
            </value>
            <value>
                <fullName>Belgium_CC_Recipients</fullName>
            </value>
            <value>
                <fullName>Netherlands_CC_Recipients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>