force-app/main/default/objects/IME_Signature_Information__c/fields/IME_Contract__c.field-meta.xml
<CustomField>
    <fullName>IME_Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Signature Information</relationshipLabel>
    <relationshipName>DocuSign_Envelopes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>