force-app/main/default/objects/IME_Signature_Information__c/fields/IME_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>IME_Email_Message__c</fullName>
    <defaultValue>&quot;As discussed I now enclose your agreement for services; I’d be grateful if you would please review and sign at your earliest convenience.&quot; &amp; BR() &amp; BR() &amp; &quot;Simply click on the link below (`View Documents`) to access the document and add your signature.&quot; &amp; BR()&amp; BR() &amp; &quot;Once you have added your signature, I will arrange for a signature to been added on our behalf and shortly after you will receive an email confirmation with a fully executed copy of the agreement attached for your records.&quot; &amp; BR() &amp; BR() &amp; &quot;Please do not hesitate to contact me in the interim if you have any questions at all.&quot; &amp; BR() &amp; BR() &amp; &quot;Many thanks&quot;</defaultValue>
    <description>Email Message for DocuSign Email</description>
    <label>Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>