force-app/main/default/objects/IME_Signature_Information__c/fields/IME_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>IME_Email_Subject__c</fullName>
    <defaultValue>&quot;Iron Mountain Contract to Sign&quot;</defaultValue>
    <description>Email Subject for DocuSign Email</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>