force-app/main/default/objects/IME_Signature_Information__c/fields/IME_EnableReminders__c.field-meta.xml
<CustomField>
    <fullName>IME_EnableReminders__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to send reminder emails to signers</description>
    <inlineHelpText>Check to send reminder emails to signers</inlineHelpText>
    <label>Remind Signers</label>
    <type>Checkbox</type>
</CustomField>