force-app/main/default/objects/IME_Signature_Information__c/fields/IME_ExpireNDays__c.field-meta.xml
<CustomField>
    <fullName>IME_ExpireNDays__c</fullName>
    <defaultValue>&quot;180&quot;</defaultValue>
    <label>Expire/Void Envelope in N day(s)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>