force-app/main/default/objects/IME_Signature_Information__c/fields/IME_ExpireVoid__c.field-meta.xml
<CustomField>
    <fullName>IME_ExpireVoid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Expiration/Void Envelope</description>
    <inlineHelpText>Enable Expiration/Void Envelope</inlineHelpText>
    <label>Expire/Void Envelope</label>
    <type>Checkbox</type>
</CustomField>