force-app/main/default/objects/IME_Signature_Information__c/fields/IME_ExpireWarnNDays__c.field-meta.xml
<CustomField>
    <fullName>IME_ExpireWarnNDays__c</fullName>
    <defaultValue>&quot;30&quot;</defaultValue>
    <description>Warn of expiration in N day(s) prior</description>
    <inlineHelpText>Warn of expiration in N day(s) prior</inlineHelpText>
    <label>Warn of expiration in N day(s) prior</label>
    <length>3</length>
    <type>Text</type>
</CustomField>