force-app/main/default/objects/IME_Signature_Information__c/fields/IME_Internal_Signatories__c.field-meta.xml
<CustomField>
    <fullName>IME_Internal_Signatories__c</fullName>
    <label>Internal Signatories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default Signatory</fullName>
            </value>
            <value>
                <fullName>High Level Signatory</fullName>
            </value>
            <value>
                <fullName>Novation or NDA</fullName>
            </value>
            <value>
                <fullName>UKINovNDA_Test</fullName>
            </value>
            <value>
                <fullName>UKIHighLevel_Test</fullName>
            </value>
            <value>
                <fullName>UKIDefault_Test</fullName>
            </value>
            <value>
                <fullName>UKINovNDA</fullName>
            </value>
            <value>
                <fullName>UKIHighLevel</fullName>
            </value>
            <value>
                <fullName>UKIDefault</fullName>
            </value>
            <value>
                <fullName>Belgium_Internal</fullName>
            </value>
            <value>
                <fullName>Netherlands_Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>