force-app/main/default/objects/IME_Signature_Information__c/fields/IME_MFP_Clause__c.field-meta.xml
<CustomField>
    <fullName>IME_MFP_Clause__c</fullName>
    <formula>TEXT(IME_Contract__r.IME_MFP_Clause__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Clause</label>
    <type>Text</type>
</CustomField>