force-app/main/default/objects/IME_Signature_Information__c/fields/IME_Non_Standard_Accounting_Clause__c.field-meta.xml
<CustomField>
    <fullName>IME_Non_Standard_Accounting_Clause__c</fullName>
    <formula>TEXT(IME_Contract__r.IME_Non_Standard_Clause__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Standard Accounting Clause</label>
    <type>Text</type>
</CustomField>