force-app/main/default/objects/IME_Signature_Information__c/fields/IME_ReminderDays__c.field-meta.xml
<CustomField>
    <fullName>IME_ReminderDays__c</fullName>
    <defaultValue>&quot;7&quot;</defaultValue>
    <inlineHelpText>Indicate how many days should pass before the first reminder is sent</inlineHelpText>
    <label>Send Reminder in N day(s)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>