force-app/main/default/objects/IME_Signature_Information__c/fields/IME_ReminderRepeatDays__c.field-meta.xml
<CustomField>
    <fullName>IME_ReminderRepeatDays__c</fullName>
    <defaultValue>&quot;7&quot;</defaultValue>
    <inlineHelpText>Indicate how often (in days) the reminder should repeat until the transaction is complete</inlineHelpText>
    <label>Repeat every N day(s) until complete</label>
    <length>3</length>
    <type>Text</type>
</CustomField>