force-app/main/default/objects/IME_Signature_Information__c/fields/IME_Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>IME_Signing_Order__c</fullName>
    <label>Signing Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IM signs first</fullName>
            </value>
            <value>
                <fullName>Client signs first</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>