force-app/main/default/objects/IME_Signature_Information__c/fields/Standard_Contract__c.field-meta.xml
<CustomField>
    <fullName>Standard_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Contract</label>
    <type>Checkbox</type>
</CustomField>