force-app/main/default/objects/IME_Signature_Information__c/validationRules/High_Level_Internal_Signatories_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Level_Internal_Signatories_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISPICKVAL(IME_Contract__r.Contract_Type__c,&quot;IM Non Standard&quot;), ISPICKVAL(IME_Contract__r.Contract_Type__c,&quot;Customer&quot;)),  NOT(TEXT(IME_Internal_Signatories__c) ==&quot;High Level Signatory&quot;),false)</errorConditionFormula>
    <errorDisplayField>IME_Internal_Signatories__c</errorDisplayField>
    <errorMessage>For ’IM Non-Standard’ or ’Customer’ contracts Internal Signatories need to be ’High Level Signatory’.</errorMessage>
</ValidationRule>