force-app/main/default/objects/IME_Signature_Information__c/validationRules/IME_Is_Valid_Signatory.validationRule-meta.xml
<ValidationRule>
    <fullName>IME_Is_Valid_Signatory</fullName>
    <active>true</active>
    <description>Rule to require valid internal signatory selection</description>
    <errorConditionFormula>ISPICKVAL( IME_Internal_Signatories__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>IME_Internal_Signatories__c</errorDisplayField>
    <errorMessage>Internal Signatories must be populated</errorMessage>
</ValidationRule>